# stac-fastapi-indexed

./: .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  CITE-TESTS.md  LICENSE  README.md  docker-compose-api.yml  docker-compose.base.yml  docker-compose.cite.yml  docker-compose.local-file.yml  docker-compose.local-http.yml  docker-compose.local-s3.smoke-test.yml  docker-compose.local-s3.test.yml  docker-compose.local-s3.validator-test.yml  docker-compose.local-s3.yml  docker-compose.local-sample.yml  docker-compose.remote-http.yml  docker-compose.remote-s3.yml  docker-compose.remote-source.yml  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: pull-request-all.yml
data/STAC/: pc_partial_download.py  re_root_sample.py  re_root_stac.py
docker/: requirements-api-generated.txt  requirements-index-common-generated.txt  requirements-indexer-generated.txt  requirements-reader-filesystem-generated.txt  requirements-reader-https-generated.txt  requirements-reader-s3-generated.txt
docker/api/: Dockerfile
docker/cite/: Dockerfile  test-run-props.xml
docker/indexer/: Dockerfile  command.sh
docker/tests/: wait_for_api.sh
docs/: development.md  index-config.md  known-issues.md  suitability.md
docs/diagrams/: Indexer Process.drawio.xml  Overview.drawio.xml  Query Process.drawio.xml
iac/: .dockerignore  .gitignore  Dockerfile  app.py  requirements.txt
iac/api/: Dockerfile
iac/cdk_deployment/: cdk_deployment_stack.py
iac/indexer/: Dockerfile  lambda.py
minio/mc/: entrypoint.sh
scripts/: assemble-stac-file-data.sh  deploy.sh  dev-init.sh  index-stac-file-data.sh  parquet-to-geoparquet.sh  run-cite-tests.sh  run-deploy.sh  run-in-container.sh  run-with-local-file.sh  run-with-local-http.sh  run-with-local-s3.sh  run-with-pc-data.sh  run-with-remote-http.sh  run-with-remote-source.sh  run-with-sample-data.sh  run-without-index.sh  update-requirements.sh
scripts/data-management/: assemble-stac-file-data.sh  index-stac-file-data.sh  parquet-to-geoparquet.sh
scripts/gpq/: build.sh
scripts/tests/: integration-test.sh  smoke-test.sh  unit-test.sh  validator-test.sh
src/stac_fastapi_indexed/: __init__.py  app.py  constants.py  core.py  db.py  settings.py
src/stac_indexer/: __init__.py  (+4 more)
stac-fastapi.indexed/: setup.py
stac-index.common/: setup.py
stac-index.indexer/: setup.py
stac-index.reader.filesystem/: setup.py
stac-index.reader.https/: setup.py
stac-index.reader.s3/: setup.py
stac_fastapi_indexed/: setup.py
stac_index_common/: setup.py
stac_indexer/: setup.py
tests/: common.py  test_core.py  test_search_handler.py
(+278 files in other folders)
