[project]
name = "StacAPIServerless"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "duckdb~=1.0.0",
    "pydantic-settings",    # don't specify a version, determined by stac-pydantic
    "pytz",
    "stac-fastapi.api~=3.0.0a2",
    "stac-fastapi.extensions~=3.0.0a2",
    "stac-fastapi.types~=3.0.0a2",
    "stac-pydantic~=3.1.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.2,<4.0"
]

[tool.isort]
profile = "black"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
